overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .strike {
   display: flex;
-  width: 110%;
+  width: 100%;
   position: absolute;
   font-weight: bold;
   background: red;
@@ -102,7 +102,8 @@ h1 {
   padding: 10px;
   padding-bottom: 25px;
   padding-right: 15px;
-  transition: all 300ms ease;
+  position: relative;
+  transition: clip-path 300ms ease;
 }
 
 #products article img {
@@ -114,10 +115,15 @@ h1 {
 #products article:hover img {
   transform: scale(1.03) translateX(2px);
 }
-
-#products article:hover {
+#products > article:nth-child(3n + 1):hover,
+#products > article:nth-child(3n + 2):hover,
+#products > article:nth-child(3n):hover {
   cursor: pointer;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+#products > article:nth-child(3n + 2):hover {
+  clip-path: polygon(50% 0%, 100% 0, 100% 100%, 50% 100%, 0 100%, 0 0);
 }
 
 #products {
@@ -136,7 +142,7 @@ h1 {
 }
 
 #products > article:nth-child(3n) {
-  clip-path: polygon(100% 1%, 100% 100%, 0 96%, 0 0);
+  clip-path: polygon(1% 0, 100% 1%, 99% 99%, 0 96%);
 }
 
 #productsSearch {
@@ -251,9 +257,8 @@ form button:hover {
 }
 
 .newspaper {
-    height: 50px;
-    background-image: url("./assets/img/newspaper.jpg");
-    background-repeat: repeat-x; /* se repite solo horizontalmente */
-    background-position: top;
+  height: 50px;
+  background-image: url("./assets/img/newspaper.jpg");
+  background-repeat: repeat-x; /* se repite solo horizontalmente */
+  background-position: top;
 }
-
